# tg-bot-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tasks.md  vercel.json
api/: exchange_token.py  index.py  telegram.py
bot/: config.py  handlers.py  logic.py  main.py  oauth_server.py  storage.py  strava.py
orchestrator/: gen.py
orchestrator/prompts/: f1_config.md  f2_logic.md  f4_storage.md  f5_strava.md  f6_oauth.md  f7_handlers.md  f8_main.md  f9_readme.md  f9_readme_system.md  s1_logic.md  s2_tests.md  s3_handlers.md  s4_main.md  v1_config.md  v2_storage.md  v3_handlers.md  v4_oauth_server.md  v5_api_telegram.md  v6_api_exchange.md  v7_main.md  v8_set_webhook.md  v9_api_index.md
scripts/: set_webhook.py
tests/: test_logic.py  test_storage.py
